# resinfs

./: .gitignore  Makefile  README.md
include/: ramfs.h  romfs-wiiu.h
samples/cmake/: helloworld.c
share/: ramfs.cmake  ramfs.mk  romfs-wiiu.mk
source/: ramfs.c  ramfs_devoptab.c  ramfs_internal.c  ramfs_internal.h  ramfs_tar.c  ramfs_tree.c  ramfs_tree.c.impl  romfs.c  romfs_devoptab.c.impl
wiiu-samples/cmake/: CMakeLists.txt  helloworld.c
wiiu-samples/cmake/ramfs/: helloworld.txt
wiiu-samples/make/: Makefile
